--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
+* {
+  font-family: Roboto, sans-serif;
+}
+
 body {
   margin: 0;
-  height: 100vh
+  height: 100vh;
 }
 
 #content {
-  width: 50%
+  width: 50%;
 }
 
 .container {
@@ -29,13 +33,22 @@ body {
   padding: 10px;
 }
 
-h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+.m-10 {
+  margin: 10px;
 }
 
 input {
   width: 200px;
 }
 
+.p-5 {
+  padding: 5px;
+}
 
+.radius-6 {
+  border-radius: 6;
+}
+
+h1 {
+  font-weight: 400;
+}
