font absolute url

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Apercu';
-  src: url('/font/apercu-regular.otf');
+  src: url('https://github.com/Egesiapres/weather-app/blob/master/font/apercu-regular.otf');
 }
 
 * {
