--- a/style/style.css
+++ b/style/style.css
@@ -18,14 +18,13 @@ body {
   position: fixed;
   width: fit-content;
   height: fit-content;
-  background-image: linear-gradient(to bottom, #164a8b, #03a0e390);
+  background-image: linear-gradient(to bottom, #164a8b, #25b9f88d);
   box-shadow: 5px 5px 10px #4d4e51;
   border-radius: 25px;
 }
 
 section {
   height: 245px;
-  /* height: 455px; */
 }
 
 #forecast-div {
@@ -126,10 +125,6 @@ section {
   border-color: #ffffff51;
 }
 
-.bc-grey {
-  border: 1px solid grey;
-}
-
 .p-20 {
   padding: 20px;
 }
@@ -151,7 +146,7 @@ section {
 }
 
 .text-black {
-  color: #212427;
+  color: #1c1c1e;
 }
 
 .text-dark {
@@ -163,7 +158,7 @@ section {
 }
 
 .bg-transparent {
-  background-color: #ffffff28;
+  background-color: #ffffff18;
 }
 
 .label {
@@ -245,12 +240,11 @@ input::placeholder {
   color: #ffffff8c;
 }
 
-input:focus {
+input:focus,
+#current-location-btn:focus,
+#scale-select:focus,
+a:focus {
   outline: 3px solid #3baaf9a9;
-}
-
-button.b-0.br-10.p-10 {
-  background-color: #ffffff50;
 }
 
 hr {
@@ -263,7 +257,7 @@ img {
 
 button img {
   width: 25px;
-  margin-top: 3px;
+  margin-top: 5px;
 }
 
 select {
@@ -274,13 +268,37 @@ a {
   text-decoration: none;
 }
 
-a:hover i.wi, a:hover {
+i {
+  margin: 0;
+}
+
+.ml-0 {
+  margin-left: 0;
+}
+
+a:hover i.wi,
+a:hover {
   color: #ffffff;
   transition: 500ms;
 }
 
 #current-location-btn {
   background-color: #ffffff64;
+  background-image: url('https://egesiapres.github.io/weather-app/img/location-light.svg');
+  width: 36px;
+  background-repeat: no-repeat;
+  background-position: 5.5px center;
+  background-size: 25px;
+}
+
+#current-location-btn:hover {
+  transition: 500ms;
+  background-color: #ffffffb6;
+  background-image: url('https://egesiapres.github.io/weather-app/img/location-dark.svg');
+  width: 36px;
+  background-repeat: no-repeat;
+  background-position: 5.5px center;
+  background-size: 25px;
 }
 
 #name-par {
