--- a/style/style.css
+++ b/style/style.css
@@ -27,6 +27,10 @@ p {
   border-radius: 20px;
 }
 
+header {
+  margin: 0 15px 15px 15px;
+}
+
 section {
   height: 245px;
 }
@@ -158,7 +162,7 @@ section {
 }
 
 .m-15 {
-  margin: 10px;
+  margin: 15px;
 }
 
 .m-10 {
@@ -335,7 +339,7 @@ strong {
 form {
   display: flex;
   column-gap: 10px;
-  margin-top: 15px;
+  margin: 15px;
 }
 
 input {
